EXTRA_DIST = \
	base64.h \
	config.h.in \
	hcp.h \
	hcp_opts.h \
	hobstack.h \
	htmlhelp.h \
	hv_ascii.h \
	hv_vers.h \
	hyp.h \
	hypcfg.h \
	hypdebug.h \
	hypdefs.h \
	hypdoc.h \
	hypintl.h \
	hypmain.h \
	hypmem.h \
	kwset.h \
	linux/libcwrap.h \
	pattern.h \
	picture.h \
	portab.h \
	profile.h \
	stat_.h \
	string_.h \
	time_.h \
	tos/av.h \
	tos/bgh.h \
	tos/bubble.h \
	tos/cookie.h \
	tos/dhst.h \
	tos/diallib.h \
	tos/dl_user.h \
	tos/dragdrop.h \
	tos/gem.h \
	tos/gscript.h \
	tos/magx.h \
	tos/mem.h \
	tos/nogem.h \
	tos/olga.h \
	tos/pchelp.h \
	tos/scancode.h \
	tos/seproto.h \
	tos/ssp.h \
	tos/viewprot.h \
	tos/xacc.h \
	tos/xattr.h \
	windows_.h \
	xgetopt.h \
	$(empty)
